<resources>
    <string name="app_name">MovieMe</string>
    <string name="name">Movie\'s Name</string>
    <string name="dname">Director\'s Name</string>
    <string name="release">Year</string>
    <string name="type">Gender</string>
    <string name="rating">Rating</string>
    <string name="rating0">Free</string>
    <string name="rating10">Above 10</string>
    <string name="rating12">Above 12</string>
    <string name="rating14">Above 14</string>
    <string name="rating16">Above 16</string>
    <string name="rating18">Above 18</string>
    <string name="add">Save</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="action">Action</string>
    <string name="drama">Drama</string>
    <string name="comedy">Comedy</string>
    <string name="thriller">Thriller</string>
    <string name="fiction">Fiction</string>
    <string name="romance">Romance</string>
    <string name="shareusing">Share Using:</string>
    <string name="sure">Are you Sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove">Are you sure that you want to exclude </string>
</resources>
