<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_movie"
        android:textSize="20sp"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/lbl_movie_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lbl_movie"
        android:layout_toEndOf="@+id/lbl_movie"
        android:text="@string/release"
        android:layout_marginStart="20dp"
        android:textSize="20sp" />

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbl_movie"
        android:id="@+id/lbl_movie_director"
        android:text="@string/dname"/>

    <TextView
        android:id="@+id/lbl_movie_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lbl_movie_director"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/lbl_movie_director"
        android:text="@string/type" />
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:id="@+id/lbl_movie_rating" />
</RelativeLayout>